add total count chart#3

--- a/charts/chart1.html
+++ b/charts/chart1.html
@@ -30,7 +30,7 @@
                 text: 'Статистика предложений на сайте Mobile.De 21.12.2016 (бензин, 700-3500куб. см, цена 500-8000 евро)'
             },
             subtitle: {
-                text: 'Source: mobile.de'
+                text: 'Подготовленно информационно-аналитической группой #ВільніЛюдиМаютьАвто на основе данныx Mobile.De'
             },
             xAxis: {
                 categories: yearsCategories
