--- a/charts/2017-05-08_1985-2016_0-8000EUR/chart_Capacity_petrol_1985-2016_1000-8000.html
+++ b/charts/2017-05-08_1985-2016_0-8000EUR/chart_Capacity_petrol_1985-2016_1000-8000.html
@@ -13,7 +13,7 @@
 
 <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 <script>
-    var priceCategories = [];
+    var capacityCategories = [];
     var totalCount = 0;
     var series = {
         name: "Обшее количество автомобилей " + totalCount,
@@ -29,13 +29,13 @@
                 type: 'line'
             },
             title: {
-                text: 'Статистика предложений на сайте Mobile.De 05.05.2017 (Сортировка по цене ТС, БЕНЗИН, 500-3000куб. см, цена 0-8000 евро, 1985-2016)'
+                text: 'Статистика предложений на сайте Mobile.De 05.05.2017 (Сортировка по объему ДВС, БЕНЗИН, 500-3000куб. см, цена 0-8000 евро, 1985-2016)'
             },
             subtitle: {
                 text: 'Подготовленно информационно-аналитической группой #ВільніЛюдиМаютьАвто на основе данныx Mobile.De'
             },
             xAxis: {
-                categories: priceCategories
+                categories: capacityCategories
             },
             yAxis: {
                 title: {
@@ -59,7 +59,7 @@
     });
 
     function prepareData(){
-        priceCategories = _.keys(obj);
+        capacityCategories = _.keys(obj);
         series.data = _.values(obj);
         totalCount = 0;
 
@@ -77,7 +77,7 @@
 
     function getDataFromFile(year){
         if(year<=2016){
-            $.getJSON("https://fphauto.github.io/static_mobile.de_21.12.2016/db/all_benzin_1985-2016_1000-8000EURO/mobileDe_statistic"+year+".json", function(receivedData){
+            $.getJSON(rootURL+"db/2017-05-08_1985-2016_0-8000EUR/all_petrol_1985-2016_1000-8000EURO/mobileDe_statistic"+year+".json", function(receivedData){
                 var total = receivedData[0].total;
 
                 remapJSON(receivedData[0], year)
@@ -91,17 +91,14 @@
     function remapJSON(json, year){
         _.each(json, function(item, capacity){
             if(capacity === "total") return;
-            _.each(item, function(value, key){
-                if(key === "capacityCount") return;
-                if(!obj[key]){
-                    obj[key]= value.item;
-                }else{
-                    obj[key]= obj[key] + value.item
-                }
+            if(!obj[capacity]){
+                obj[capacity] = item.capacityCount
+            }else{
+                obj[capacity] = obj[capacity] + item.capacityCount
+            }
 
-            });
+
         });
-
         if(year<=2016){
             getDataFromFile(year+1)
         }
