--- a/charts/2017-05-08_1985-2016_0-8000EUR/chart_YEAR_petrol_1985-2016_1000-8000.html
+++ b/charts/2017-05-08_1985-2016_0-8000EUR/chart_YEAR_petrol_1985-2016_1000-8000.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-<script src="/rootURL.js"></script>
+<script src="/mobile.de_statistic/rootURL.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
