--- a/charts/2017-05-08_1985-2016_0-8000EUR/chart_Capacity_diesel_1985-2016_1000-8000.html
+++ b/charts/2017-05-08_1985-2016_0-8000EUR/chart_Capacity_diesel_1985-2016_1000-8000.html
@@ -13,8 +13,26 @@
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
 
+<script src="chart.js"></script>
+
 <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 <script>
+    var searchParams = {
+        date: "05.05.2017",
+        price: {
+            start:"",
+            end:""
+        },
+        rangeYear: {
+            start: "",
+            end: ""
+        },
+        rangeCapacity:{
+            start: "600",
+            end: "2500"
+        }
+    };
+
     var capacityCategories = [];
     var totalCount = 0;
     var series = {
@@ -22,7 +40,12 @@
         data: []
     };
 
-    var obj = {}
+    var obj = {};
+
+    var chartParams = {
+        titleText: 'Статистика предложений на сайте Mobile.De '+searchParams.date+' (Сортировка по объему ДВС, ДИЗЕЛЬ, '+ searchParams.rangeCapacity.start+'-'+searchParams.rangeCapacity.end+'куб. см, цена 0-8000 евро, 1985-2016)',
+        categories: capacityCategories
+    }
 
 
     function renderChart () {
@@ -31,13 +54,13 @@
                 type: 'line'
             },
             title: {
-                text: 'Статистика предложений на сайте Mobile.De 05.05.2017 (Сортировка по объему ДВС, ДИЗЕЛЬ, 500-2500куб. см, цена 0-8000 евро, 1985-2016)'
+                text: chartParams.titleText
             },
             subtitle: {
                 text: 'Подготовленно информационно-аналитической группой #ВільніЛюдиМаютьАвто на основе данныx Mobile.De'
             },
             xAxis: {
-                categories: capacityCategories
+                categories: chartParams.categories
             },
             yAxis: {
                 title: {
